package Project_Pbo_1;

public class Orang {
    private String nama, nip, alamat, domisili;

    public Orang() {
    }

    String getNama() {
        return nama;
    }

    void setNama(String nama) {
        this.nama = nama;
    }

    String getDomisili() {
        return domisili;
    }

    void setDomisili(String domisili) {
        domisili = domisili;
    }

    String getAlamat() {
        return alamat;
    }

    void setAlamat(String alamat) {
        alamat = alamat;
    }

    String getNip() {
        return nip;
    }

    void setNip(String nip) {
        this.nip = nip;
    }

}
