package Project_Pbo_1;

import java.util.Scanner;

public class Umat extends Orang {
    Umat(){}

}
class  Lingkungan{
    private String namaLingkungan;

    public String getNamaLingkungan(){
        return namaLingkungan;
    }

    public void setNamaLingkungan(String namaLingkungan){
        this.namaLingkungan = namaLingkungan;
    }

}