package org.example;

public class daftarMisa {

}
