@startuml
'https://plantuml.com/class-diagram

class Orang{
- nama , nip , alamat , domisili : String
~getNama():String
~setNama(nama : String):void
~getDomisili():String
~setDomisili(domisili : String) : void
~getAlamat():String
~setAlamat(alamat : String):void
~getNip():String
~setNip(nip : String):void
}

abstract class Karyawan{
+<<abstract>>setGajiPokok(gajiPokok : double)
+<<abstract>>gajiPokokk()
+<<abstract>>gajiTotal()
}

class Sekretaris{
-gajiPokok , tunjangan = 150000
-jumlahAnak : int
~Sekretaris()
+gajiPokok():double
+gajiTotal():double
+tunjanganAnak():double
}

class Paroki{
- namaParoki , alamatParoki , kodepos  : String
+String getnamaParoki():String
+void setNamaParoki(namaParoki : String):void
+String alamatParoki(alamatParoki :String):String
+void setAlamat():void
+String kodepos(kodepos : String):String
+void setKodePos():void
}


interface Jabatan{
~jabatan() : String
}


class Romo{

+jumlahMisa(Scanner scan):void
+gajiTotalMisa():double
}

class Umat{
+getEmail():String
DaftarMisa : String []
}
class DaftarMisa{


}


class Koster{
-gajiPokok , tunjangan = 100000
-jumlahAnak : int
~Koster()
+gajiPokok():double
+gajiTotal():double
+tunjanganAnak():double
}

interface Tunjangan{
~tunjanganAnak():double
}

Tunjangan -[dashed]->Sekretaris
Tunjangan -[dashed]-> Koster
Jabatan -[dashed]|> Karyawan
Romo --|> Orang
Sekretaris --|> Karyawan
Koster --|> Karyawan
Orang --|> Karyawan
Orang --|> Umat
Jabatan -[dashed]|>Romo
Umat *-- Paroki
@enduml